--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.1",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
-    "express": "~4.13.4",
-    "hbs": "~4.0.0",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
-    "express-session": "~1.14.2",
-    "mysql": "~2.12.0",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "formidable": "*",
-    "moment": "2.17.1",
-    "node-uuid": "*"
+    "hbs": "~4.0.0",
+    "moment": "^2.22.2",
+    "morgan": "^1.9.0",
+    "mysql": "^2.15.0",
+    "node-uuid": "*",
+    "serve-favicon": "^2.5.0"
   }
 }
