--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "hbs": "~4.2.0",
     "moment": "^2.29.4",
     "morgan": "^1.9.1",
-    "mysql": "^2.15.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.0",
     "node-uuid": "*",
     "serve-favicon": "^2.5.0"
   }
